@@ -1,27 +1,35 @@
 ---
+description: 计算与存储分离
 displayed_sidebar: docs
-sidebar_position: 2
-description: "存算分离"
-keywords: ['cunsuan']
 ---
 
-# 存算分离
+# Separate storage and compute
 
 import DDL from '../_assets/quick-start/_DDL.mdx'
 import Clients from '../_assets/quick-start/_clientsCompose.mdx'
 import SQL from '../_assets/quick-start/_SQL.mdx'
 import Curl from '../_assets/quick-start/_curl.mdx'
 
+在存储与计算分离的系统中，数据存储在低成本、可靠的远端存储系统中，如 Amazon S3、Google Cloud Storage、Azure Blob Storage 和其他兼容 S3 的存储如 MinIO。热数据会被本地缓存，当缓存命中时，查询性能可与存储计算耦合架构相媲美。计算节点（CN）可以根据需求在几秒内添加或移除。这种架构降低了存储成本，确保了更好的资源隔离，并提供了弹性和可扩展性。
 
-在 StarRocks 存算分离架构中，数据存储在成本更低且更可靠的远程存储系统中，例如 Amazon S3、Google Cloud Storage、Azure Blob Storage 以及其他支持 S3 协议的存储，如 MinIO。热数据会被缓存到本地，在查询命中缓存的前提下，存算分离集群的查询性能与存算一体集群相当。同时，在存算分离架构下，计算节点（CN）可以在几秒内根据需要实现扩缩容。因此，StarRocks 的存算分离架构不仅降低了存储成本，保证了资源隔离性能，还提供了计算资源的弹性和可扩展性。
+本教程涵盖：
 
-本教程涵盖以下内容：
+- 在 Docker 容器中运行 StarRocks
+- 使用 MinIO 作为对象存储
+- 配置 StarRocks 以实现共享数据
+- 导入两个公共数据集
+- 使用 SELECT 和 JOIN 分析数据
+- 基本数据转换（ETL 中的 **T**）
 
-- 使用 Docker Compose 部署 StarRocks 存算分离集群以及 MinIO 作为对象存储。
-- 导入数据集，并在导入过程中进行基本的数据转换。
-- 查询分析数据。
+使用的数据由纽约市开放数据和 NOAA 的国家环境信息中心提供。
 
-本教程中使用的数据由 NYC OpenData 和 NOAA 的 National Centers for Environmental Information 提供。教程仅截取了数据集的部分字段。
+这两个数据集都非常大，因为本教程旨在帮助您接触 StarRocks 的使用，我们不会导入过去 120 年的数据。您可以在分配了 4 GB RAM 的机器上运行 Docker 镜像并导入这些数据。对于更大规模的容错和可扩展部署，我们有其他文档，并将在后续提供。
+
+本文档包含大量信息，内容以步骤为主，技术细节在后面。这是为了按以下顺序实现这些目的：
+
+1. 允许读者在共享数据部署中导入数据并分析这些数据。
+2. 提供共享数据部署的配置细节。
+3. 解释数据导入过程中的基本数据转换。
 
 ---
 
@@ -29,17 +37,25 @@ import Curl from '../_assets/quick-start/_curl.mdx'
 
 ### Docker
 
-- [安装 Docker](https://docs.docker.com/engine/install/)。
-- 为 Docker 分配 4 GB RAM。
-- 为 Docker 分配 10 GB 的空闲磁盘空间。
+- [Docker](https://docs.docker.com/engine/install/)
+- 分配给 Docker 的 4 GB RAM
+- 分配给 Docker 的 10 GB 可用磁盘空间
 
 ### SQL 客户端
 
-您可以使用 Docker 环境中提供的 MySQL Client，也可以使用其他兼容 MySQL 的客户端，包括本教程中涉及的 DBeaver 和 MySQL Workbench。
+您可以使用 Docker 环境中提供的 SQL 客户端，或使用您系统上的客户端。许多兼容 MySQL 的客户端都可以使用，本指南涵盖了 DBeaver 和 MySQL Workbench 的配置。
 
 ### curl
 
-`curl` 命令用于向 StarRocks 中导入数据以及下载数据集。您可以通过在终端运行 `curl` 或 `curl.exe` 来检查您的操作系统是否已安装 curl。如果未安装 curl，[请点击此处获取 curl](https://curl.se/dlwiz/?type=bin)。
+`curl` 用于向 StarRocks 发起数据导入任务，并下载数据集。通过在操作系统提示符下运行 `curl` 或 `curl.exe` 来检查是否已安装 curl。如果未安装 curl，请[在此获取 curl](https://curl.se/dlwiz/?type=bin)。
+
+### `/etc/hosts`
+
+本指南中使用的导入方法是 Stream Load。Stream Load 连接到 FE 服务以启动导入任务。然后 FE 将任务分配给后端节点，即本指南中的 CN。为了使导入任务能够连接到 CN，CN 的名称必须在您的操作系统中可用。将以下行添加到 `/etc/hosts`：
+
+```bash
+127.0.0.1 starrocks-cn
+```
 
 ---
 
@@ -47,92 +63,126 @@ import Curl from '../_assets/quick-start/_curl.mdx'
 
 ### FE
 
-FE 节点负责元数据管理、客户端连接管理、查询计划和查询调度。每个 FE 在其内存中存储和维护完整的元数据副本，确保每个 FE 都能提供无差别的服务。
+前端节点负责元数据管理、客户端连接管理、查询规划和查询调度。每个 FE 在其内存中存储并维护一份完整的元数据副本，确保 FEs 之间的服务无差别。
 
 ### CN
 
-CN 节点在**存算分离**或**存算一体**集群中负责执行查询。
+计算节点负责在共享数据部署中执行查询计划。
 
 ### BE
 
-BE 节点在**存算一体**集群中负责数据存储和执行查询。
+后端节点负责在无共享部署中进行数据存储和执行查询计划。
 
 :::note
-当前教程不包含 BE 节点，以上内容仅供您了解 BE 和 CN 之间的区别。
+本指南不使用 BEs，此信息仅供您了解 BEs 和 CNs 之间的区别。
 :::
 
 ---
 
-## 启动 StarRocks
+## 编辑您的 hosts 文件
 
-要基于对象存储部署 StarRocks 存算分离集群，您需要部署以下服务：
+本指南中使用的导入方法是 Stream Load。Stream Load 连接到 FE 服务以启动导入任务。然后 FE 将任务分配给后端节点——本指南中的 CN。为了使导入任务能够连接到 CN，CN 的名称必须在您的操作系统中可用。将以下行添加到 `/etc/hosts`：
 
-- 一个 FE 节点
-- 一个 CN 节点
-- 对象存储
+```bash
+127.0.0.1 starrocks-cn
+```
 
-本教程使用 MinIO 作为对象存储。
+## 下载实验文件
 
-StarRocks 提供了一个 Docker Compose 文件，用于搭建包含以上三个必要容器的环境。
+需要下载三个文件：
 
-下载 Docker Compose 文件。
+- 部署 StarRocks 和 MinIO 环境的 Docker Compose 文件
+- 纽约市交通事故数据
+- 天气数据
+
+本指南使用 MinIO，它是根据 GNU Affero 通用公共许可证提供的兼容 S3 的对象存储。
+
+### 创建一个目录来存储实验文件
 
 ```bash
 mkdir quickstart
 cd quickstart
+```
+
+### 下载 Docker Compose 文件
+
+```bash
 curl -O https://raw.githubusercontent.com/StarRocks/demo/master/documentation-samples/quickstart/docker-compose.yml
 ```
 
-启动容器。
+### 下载数据
+
+下载这两个数据集：
+
+#### 纽约市交通事故数据
 
 ```bash
-docker compose up -d
+curl -O https://raw.githubusercontent.com/StarRocks/demo/master/documentation-samples/quickstart/datasets/NYPD_Crash_Data.csv
 ```
 
-## 检查环境状态
-
-成功启动后，FE 和 CN 节点大约需要 30 秒才能部署完成。需要通过 `docker compose ps` 命令检查服务的运行状态，直到 `starrocks-fe` 和 `starrocks-cn` 的状态变为 `healthy`。
+#### 天气数据
 
 ```bash
-docker compose ps
+curl -O https://raw.githubusercontent.com/StarRocks/demo/master/documentation-samples/quickstart/datasets/72505394728.csv
 ```
-
-返回：
-
-```plaintext
-SERVICE        CREATED          STATUS                    PORTS
-starrocks-cn   25 seconds ago   Up 24 seconds (healthy)   0.0.0.0:8040->8040/tcp
-starrocks-fe   25 seconds ago   Up 24 seconds (healthy)   0.0.0.0:8030->8030/tcp, 0.0.0.0:9020->9020/tcp, 0.0.0.0:9030->9030/tcp
-minio          25 seconds ago   Up 24 seconds             0.0.0.0:9000-9001->9000-9001/tcp
-```
-
-以上返回不会显示 MinIO 容器的健康状态，您需要在下一步中通过使用 MinIO Web UI 验证其健康状态。
 
 ---
 
-## 生成 MinIO 认证凭证
+## 部署 StarRocks 和 MinIO
 
-要访问 MinIO，您需要生成一个 **访问密钥**。
+```bash
+docker compose up --detach --wait --wait-timeout 120
+```
 
-### 打开 MinIO Web UI
+FE、CN 和 MinIO 服务变为健康状态大约需要 30 秒。`quickstart-minio_mc-1` 容器将显示 `Waiting` 状态和一个退出代码。退出代码为 `0` 表示成功。
 
-从浏览器进入 `http://localhost:9001/access-keys`。登录用的用户名和密码已经在 Docker Compose 文件中指定，分别为 `miniouser` 和 `miniopassword`。UI 中将显示存在一对访问密钥 `AAAAAAAAAAAAAAAAAAAA`，其密钥值已在 Docker Compose 文件中指定，为`BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB`。
+```bash
+[+] Running 4/5
+ ✔ Network quickstart_default       Created    0.0s
+ ✔ Container minio                  Healthy    6.8s
+ ✔ Container starrocks-fe           Healthy    29.3s
+ ⠼ Container quickstart-minio_mc-1  Waiting    29.3s
+ ✔ Container starrocks-cn           Healthy    29.2s
+container quickstart-minio_mc-1 exited (0)
+```
 
-![View the MinIO access key](../_assets/quick-start/MinIO-view-key.png)
+---
+
+## MinIO
+
+本快速入门使用 MinIO 进行共享存储。
+
+### 验证 MinIO 凭证
+
+要将 MinIO 用作 StarRocks 的对象存储，StarRocks 需要一个 MinIO 访问密钥。访问密钥是在 Docker 服务启动时生成的。为了帮助您更好地理解 StarRocks 如何连接到 MinIO，您应该验证密钥是否存在。
+
+浏览到 [http://localhost:9001/access-keys](http://localhost:9001/access-keys) 用户名和密码在 Docker compose 文件中指定，分别是 `miniouser` 和 `miniopassword`。您应该看到有一个访问密钥。密钥是 `AAAAAAAAAAAAAAAAAAAA`，您无法在 MinIO 控制台中看到密钥，但它在 Docker compose 文件中是 `BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB`：
+
+![查看 MinIO 访问密钥](../_assets/quick-start/MinIO-view-key.png)
 
 :::tip
-如果 MinIO Web UI 中未显示访问密钥，你可以检查 `minio_mc` 服务的日志：
+如果 MinIO 网页 UI 中没有显示访问密钥，请检查 `minio_mc` 服务的日志：
 
 ```bash
 docker compose logs minio_mc
 ```
 
-尝试重新运行 `minio_mc` Pod：
+尝试重新运行 `minio_mc` pod：
 
 ```bash
 docker compose run minio_mc
 ```
 :::
+
+### 为您的数据创建一个 bucket
+
+当您在 StarRocks 中创建一个存储卷时，您将指定数据的 `LOCATION`：
+
+```sh
+    LOCATIONS = ("s3://my-starrocks-bucket/")
+```
+
+打开 [http://localhost:9001/buckets](http://localhost:9001/buckets) 并为存储卷添加一个 bucket。将 bucket 命名为 `my-starrocks-bucket`。接受列出的三个选项的默认值。
 
 ---
 
@@ -142,130 +192,182 @@ docker compose run minio_mc
 
 ---
 
-## 下载数据
+## StarRocks 的共享数据配置
 
-将教程所需的数据集下载到 FE 容器中。
+此时，您已经运行了 StarRocks，并且 MinIO 也在运行。MinIO 访问密钥用于连接 StarRocks 和 MinIO。
 
-在容器中启动 Shell。
+这是 `FE` 配置的一部分，指定 StarRocks 部署将使用共享数据。这是在 Docker Compose 创建部署时添加到文件 `fe.conf` 中的。
 
-```bash
-docker compose exec starrocks-fe bash
+```sh
+# enable the shared data run mode
+run_mode = shared_data
+cloud_native_storage_type = S3
 ```
 
-创建用于存放数据集文件的路径。
+:::info
+您可以通过从 `quickstart` 目录运行此命令并查看文件末尾来验证这些设置：
+:::
 
-```bash
-mkdir quickstart
-cd quickstart
+```sh
+docker compose exec starrocks-fe \
+  cat /opt/starrocks/fe/conf/fe.conf
 ```
-
-下载交通事故数据集。
-
-```bash
-curl -O https://raw.githubusercontent.com/StarRocks/demo/master/documentation-samples/quickstart/datasets/NYPD_Crash_Data.csv
-```
-
-下载天气数据集。
-
-```bash
-curl -O https://raw.githubusercontent.com/StarRocks/demo/master/documentation-samples/quickstart/datasets/72505394728.csv
-```
-
----
-
-## 配置 StarRocks 存算分离集群
-
-启动 StarRocks 以及 MinIO 后，您需要连接并配置 StarRocks 存算分离集群。
+:::
 
 ### 使用 SQL 客户端连接到 StarRocks
 
-- 如果您使用 StarRocks 容器中的 MySQL Client，需要从包含 `docker-compose.yml` 文件的路径运行以下命令。
-
-  ```sql
-  docker compose exec starrocks-fe \
-  mysql -P9030 -h127.0.0.1 -uroot --prompt="StarRocks > "
-  ```
-
-- 如果您使用其他客户端，请打开客户端并连接至 StarRocks。
-
-### 创建存储卷
-
-StarRocks 存算分离集群需要通过存储卷将数据持久化到对象存储中。
-
-以下为创建存储卷时需要用到的信息：
-
-- MinIO 服务器 URL 为 `http://minio:9000`。
-- 集群中的数据将通过存储卷持久化在 `starrocks` 存储桶中的 `shared` 的文件夹下。请注意，`shared` 文件夹将在数据第一次导入集群时自动创建。
-- MinIO 服务器未使用 SSL。
-- 连接 MinIO 需要 Access Key 和 Secret Key 即为 MinIO Web UI 中创建的访问密钥。
-- 您需要将该存储卷设置为默认存储卷。
-
 :::tip
-运行以下命令之前，您需要将 `aws.s3.access_key` 和 `aws.s3.secret_key` 配置项的值替换为您在 MinIO 中创建的 Access Key 和 Secret Key。
+
+从包含 `docker-compose.yml` 文件的目录运行此命令。
+
+如果您使用的是 MySQL 命令行客户端以外的客户端，请现在打开它。
 :::
-
-```bash
-CREATE STORAGE VOLUME shared
-TYPE = S3
-LOCATIONS = ("s3://starrocks/shared/")
-PROPERTIES
-(
-    "enabled" = "true",
-    "aws.s3.endpoint" = "http://minio:9000",
-    "aws.s3.use_aws_sdk_default_behavior" = "false",
-    "aws.s3.enable_ssl" = "false",
-    "aws.s3.use_instance_profile" = "false",
-    # highlight-start
-    "aws.s3.access_key" = "AAAAAAAAAAAAAAA",
-    "aws.s3.secret_key" = "BBBBBBBBBBBBBBBBBBBBBBBBBBBBB"
-    # highlight-end
-);
-SET shared AS DEFAULT STORAGE VOLUME;
-```
-
-创建成功后，查看该存储卷。
 
 ```sql
-DESC STORAGE VOLUME shared\G
+docker compose exec starrocks-fe \
+mysql -P9030 -h127.0.0.1 -uroot --prompt="StarRocks > "
+```
+
+#### 检查存储卷
+
+```sql
+SHOW STORAGE VOLUMES;
 ```
 
 :::tip
-`\G` 表示将查询结果按列打印。如果您的 SQL 客户端不支持垂直格式输出，则需要将 `\G` 替换为 `;`。
+应该没有存储卷，您将接下来创建一个。
 :::
 
-返回：
+```sh
+Empty set (0.04 sec)
+```
 
-```plaintext
+#### 创建一个共享数据存储卷
+
+之前您在 MinIO 中创建了一个名为 `my-starrocks-volume` 的 bucket，并验证了 MinIO 有一个名为 `AAAAAAAAAAAAAAAAAAAA` 的访问密钥。以下 SQL 将在 MionIO bucket 中使用访问密钥和密钥创建一个存储卷。
+
+```sql
+CREATE STORAGE VOLUME s3_volume
+    TYPE = S3
+    LOCATIONS = ("s3://my-starrocks-bucket/")
+    PROPERTIES
+    (
+         "enabled" = "true",
+         "aws.s3.endpoint" = "minio:9000",
+         "aws.s3.access_key" = "AAAAAAAAAAAAAAAAAAAA",
+         "aws.s3.secret_key" = "BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB",
+         "aws.s3.use_instance_profile" = "false",
+         "aws.s3.use_aws_sdk_default_behavior" = "false"
+     );
+```
+
+现在您应该看到一个存储卷列出，之前是空集：
+
+```
+SHOW STORAGE VOLUMES;
+```
+
+```
++----------------+
+| Storage Volume |
++----------------+
+| s3_volume      |
++----------------+
+1 row in set (0.02 sec)
+```
+
+查看存储卷的详细信息，并注意这还不是默认卷，并且它被配置为使用您的 bucket：
+
+```
+DESC STORAGE VOLUME s3_volume\G
+```
+
+:::tip
+本文档中的一些 SQL 以及 StarRocks 文档中的许多其他文档以 `\G` 而不是分号结束。` \G` 使 mysql CLI 垂直呈现查询结果。
+
+许多 SQL 客户端不解释垂直格式输出，因此您应将 `\G` 替换为 `;`。
+:::
+
+```sh
 *************************** 1. row ***************************
-     Name: shared
+     Name: s3_volume
      Type: S3
-IsDefault: true
 # highlight-start
- Location: s3://starrocks/shared/
-   Params: {"aws.s3.access_key":"******","aws.s3.secret_key":"******","aws.s3.endpoint":"http://minio:9000","aws.s3.region":"us-east-1","aws.s3.use_instance_profile":"false","aws.s3.use_aws_sdk_default_behavior":"false"}
+IsDefault: false
+ Location: s3://my-starrocks-bucket/
 # highlight-end
+   Params: {"aws.s3.access_key":"******","aws.s3.secret_key":"******","aws.s3.endpoint":"minio:9000","aws.s3.region":"us-east-1","aws.s3.use_instance_profile":"false","aws.s3.use_web_identity_token_file":"false","aws.s3.use_aws_sdk_default_behavior":"false"}
   Enabled: true
   Comment:
-1 row in set (0.03 sec)
+1 row in set (0.02 sec)
+```
+
+## 设置默认存储卷
+
+```
+SET s3_volume AS DEFAULT STORAGE VOLUME;
+```
+
+```
+DESC STORAGE VOLUME s3_volume\G
+```
+
+```sh
+*************************** 1. row ***************************
+     Name: s3_volume
+     Type: S3
+# highlight-next-line
+IsDefault: true
+ Location: s3://my-starrocks-bucket/
+   Params: {"aws.s3.access_key":"******","aws.s3.secret_key":"******","aws.s3.endpoint":"minio:9000","aws.s3.region":"us-east-1","aws.s3.use_instance_profile":"false","aws.s3.use_web_identity_token_file":"false","aws.s3.use_aws_sdk_default_behavior":"false"}
+  Enabled: true
+  Comment:
+1 row in set (0.02 sec)
+```
+
+## 创建一个数据库
+
+```
+CREATE DATABASE IF NOT EXISTS quickstart;
+```
+
+验证数据库 `quickstart` 是否使用存储卷 `s3_volume`：
+
+```
+SHOW CREATE DATABASE quickstart \G
+```
+
+```sh
+*************************** 1. row ***************************
+       Database: quickstart
+Create Database: CREATE DATABASE `quickstart`
+# highlight-next-line
+PROPERTIES ("storage_volume" = "s3_volume")
 ```
 
 ---
 
-## 建表
+## 创建一些表
 
 <DDL />
 
 ---
 
-## 导入数据集
+## 导入两个数据集
 
-StarRocks 提供多种数据导入方法。本教程使用 curl 命令发起 Stream Load 任务导入数据。
+有很多方法可以将数据导入 StarRocks。对于本教程，最简单的方法是使用 curl 和 StarRocks Stream Load。
 
-Stream Load 使用的 curl 命令虽然看起来复杂，但本教程在最后部分提供了详细解释。建议您先运行该命令导入数据，然后在教程结束后了解有关数据导入的详细内容。
+:::tip
 
-### 导入纽约市交通事故数据
+从您下载数据集的目录运行这些 curl 命令。
 
-通过 FE 容器的 Shell Session 进入数据集文件所在的路径，然后运行以下命令。
+系统可能会提示您输入密码。您可能没有为 MySQL `root` 用户分配密码，因此只需按回车键。
+
+:::
+
+`curl` 命令看起来很复杂，但在教程的最后有详细解释。现在，我们建议运行这些命令并运行一些 SQL 来分析数据，然后在最后阅读有关数据导入的详细信息。
+
+### 纽约市碰撞数据 - 事故
 
 ```bash
 curl --location-trusted -u root             \
@@ -279,9 +381,7 @@ curl --location-trusted -u root             \
     -XPUT http://localhost:8030/api/quickstart/crashdata/_stream_load
 ```
 
-运行命令后，系统会提示您输入密码。由于您尚未为 `root` 用户分配密码，所以只需按 **Enter** 键跳过。
-
-以下是上述命令的返回。其中 `Status` 为 `Success`，表示导入成功。`NumberFilteredRows` 为 1，表示数据集中包含一行错误数据，StarRocks 在导入过程将该行过滤。
+这是上述命令的输出。第一个高亮部分显示了您应该看到的内容（OK 和除一行外的所有行都已插入）。有一行被过滤掉，因为它不包含正确数量的列。
 
 ```bash
 Enter host password for user 'root':
@@ -304,34 +404,31 @@ Enter host password for user 'root':
     "WriteDataTimeMs": 870,
     "CommitAndPublishTimeMs": 57,
     # highlight-start
-    "ErrorURL": "http://10.5.0.3:8040/api/_load_error_log?file=error_log_da41dd88276a7bfc_739087c94262ae9f"
+    "ErrorURL": "http://starrocks-cn:8040/api/_load_error_log?file=error_log_da41dd88276a7bfc_739087c94262ae9f"
     # highlight-end
 }%
 ```
 
-当 Stream Load 发生错误时，StarRocks 会返回一个包含错误信息的 URL。由于容器具有私有 IP 地址，您必须通过容器中的 Shell Session 运行 curl 命令查看。
+如果有错误，输出会提供一个 URL 来查看错误消息。错误消息还包含 Stream Load 任务分配到的后端节点（`starrocks-cn`）。由于您在 `/etc/hosts` 文件中添加了 `starrocks-cn` 的条目，因此您应该能够导航到它并读取错误消息。
 
-```bash
-curl http://10.5.0.3:8040/api/_load_error_log?file=error_log_da41dd88276a7bfc_739087c94262ae9f
-```
-
-点击下方 **错误信息** 查看 URL 中包含的错误信息。
+展开本教程开发过程中看到的内容摘要：
 
 <details>
 
-<summary>错误信息</summary>
+<summary>在浏览器中读取错误消息</summary>
 
 ```bash
 Error: Value count does not match column count. Expect 29, but got 32.
+
 Column delimiter: 44,Row delimiter: 10.. Row: 09/06/2015,14:15,,,40.6722269,-74.0110059,"(40.6722269, -74.0110059)",,,"R/O 1 BEARD ST. ( IKEA'S 
 09/14/2015,5:30,BRONX,10473,40.814551,-73.8490955,"(40.814551, -73.8490955)",TORRY AVENUE                    ,NORTON AVENUE                   ,,0,0,0,0,0,0,0,0,Driver Inattention/Distraction,Unspecified,,,,3297457,PASSENGER VEHICLE,PASSENGER VEHICLE,,,
 ```
 
 </details>
 
-### 导入天气数据
+### 天气数据
 
-依照同样的方式导入天气数据。
+以与加载碰撞数据相同的方式加载天气数据集。
 
 ```bash
 curl --location-trusted -u root             \
@@ -349,123 +446,135 @@ curl --location-trusted -u root             \
 
 ## 验证数据是否存储在 MinIO 中
 
-打开 [MinIO Web UI](http://localhost:9001/browser/starrocks/) 并验证在 `starrocks/shared/` 下的每个路径中是否有 `data`、`metadata` 和 `schema` 路径。
+打开 MinIO [http://localhost:9001/browser/my-starrocks-bucket](http://localhost:9001/browser/my-starrocks-bucket) 并验证您在 `my-starrocks-bucket/` 下是否有条目
 
 :::tip
-在导入数据时，`starrocks/shared/` 下的文件夹名称是动态生成的。您会在 `shared` 下面看到一个路径，然后在该路径下看到另外两个路径。在每个路径内，您都能看到 `data`、`metadata` 和 `schema` 路径。
+`my-starrocks-bucket/` 下的文件夹名称是在加载数据时生成的。您应该在 `my-starrocks-bucket` 下看到一个目录，然后在其下看到两个目录。在这些目录中，您会找到数据、元数据或模式条目。
 
-![MinIO Web UI](../_assets/quick-start/MinIO-data.png)
+![MinIO 对象浏览器](../_assets/quick-start/MinIO-data.png)
 :::
 
 ---
 
-## 查询数据并回答问题
+## 回答一些问题
 
 <SQL />
 
 ---
 
-## 存算分离集群配置细节
+## 配置 StarRocks 以实现共享数据
 
-本小节介绍 StarRocks 存算分离集群的配置信息。
+现在您已经体验了使用 StarRocks 的共享数据，了解配置很重要。
 
 ### CN 配置
 
-本教程中使用的 CN 配置是默认配置。如下所示。您无需进行任何更改。
+此处使用的 CN 配置是默认配置，因为 CN 设计用于共享数据使用。默认配置如下所示。您无需进行任何更改。
 
 ```bash
 sys_log_level = INFO
 
+# ports for admin, web, heartbeat service
 be_port = 9060
 be_http_port = 8040
 heartbeat_service_port = 9050
 brpc_port = 8060
+starlet_port = 9070
 ```
 
 ### FE 配置
 
-FE 配置与默认配置略有不同，需要额外添加与对象存储相关的配置项。
+FE 配置与默认配置略有不同，因为 FE 必须配置为期望数据存储在对象存储中，而不是 BE 节点上的本地磁盘上。
 
-以下为 `docker-compose.yml` 文件中用于生成 FE 配置的命令。
+`docker-compose.yml` 文件在 `command` 中生成 FE 配置。
 
-```yml
-    command: >
-      bash -c "echo run_mode=shared_data >> /opt/starrocks/fe/conf/fe.conf &&
-      echo cloud_native_meta_port=6090 >> /opt/starrocks/fe/conf/fe.conf &&
-      echo aws_s3_path=starrocks >> /opt/starrocks/fe/conf/fe.conf &&
-      echo aws_s3_endpoint=minio:9000 >> /opt/starrocks/fe/conf/fe.conf &&
-      echo aws_s3_use_instance_profile=false >> /opt/starrocks/fe/conf/fe.conf &&
-      echo cloud_native_storage_type=S3 >> /opt/starrocks/fe/conf/fe.conf &&
-      echo aws_s3_use_aws_sdk_default_behavior=false >> /opt/starrocks/fe/conf/fe.conf &&
-      sh /opt/starrocks/fe/bin/start_fe.sh"
+```plaintext
+# enable shared data, set storage type, set endpoint
+run_mode = shared_data
+cloud_native_storage_type = S3
 ```
 
-以上命令会生成以下 FE 配置文件 **fe.conf**：
+:::note
+此配置文件不包含 FE 的默认条目，仅显示共享数据配置。
+:::
 
-```bash title='fe/fe.conf'
-LOG_DIR = ${STARROCKS_HOME}/log
+非默认 FE 配置设置：
 
-DATE = "$(date +%Y%m%d-%H%M%S)"
-JAVA_OPTS="-Dlog4j2.formatMsgNoLookups=true -Xmx8192m -XX:+UseMembar -XX:SurvivorRatio=8 -XX:MaxTenuringThreshold=7 -XX:+PrintGCDateStamps -XX:+PrintGCDetails -XX:+UseConcMarkSweepGC -XX:+UseParNewGC -XX:+CMSClassUnloadingEnabled -XX:-CMSParallelRemarkEnabled -XX:CMSInitiatingOccupancyFraction=80 -XX:SoftRefLRUPolicyMSPerMB=0 -Xloggc:${LOG_DIR}/fe.gc.log.$DATE -XX:+PrintConcurrentLocks"
-
-JAVA_OPTS_FOR_JDK_11="-Dlog4j2.formatMsgNoLookups=true -Xmx8192m -XX:+UseG1GC -Xlog:gc*:${LOG_DIR}/fe.gc.log.$DATE:time"
-
-sys_log_level = INFO
-
-http_port = 8030
-rpc_port = 9020
-query_port = 9030
-edit_log_port = 9010
-
-# highlight-start
-run_mode=shared_data
-aws_s3_path=starrocks
-aws_s3_endpoint=minio:9000
-aws_s3_use_instance_profile=false
-cloud_native_storage_type=S3
-aws_s3_use_aws_sdk_default_behavior=false
-# highlight-end
-```
-
-参数的具体解释如下：
+:::note
+许多配置参数以 `s3_` 为前缀。此前缀用于所有兼容 Amazon S3 的存储类型（例如：S3、GCS 和 MinIO）。使用 Azure Blob Storage 时，前缀为 `azure_`。
+:::
 
 #### `run_mode=shared_data`
 
-该参数用于启用存算分离模式。
+这启用了共享数据使用。
 
-#### `aws_s3_path=starrocks`
+#### `cloud_native_storage_type=S3`
 
-存储桶名称。
+这指定了使用 S3 兼容存储还是 Azure Blob Storage。对于 MinIO，这始终是 S3。
+
+### `CREATE storage volume` 的详细信息
+
+```sql
+CREATE STORAGE VOLUME s3_volume
+    TYPE = S3
+    LOCATIONS = ("s3://my-starrocks-bucket/")
+    PROPERTIES
+    (
+         "enabled" = "true",
+         "aws.s3.endpoint" = "minio:9000",
+         "aws.s3.access_key" = "AAAAAAAAAAAAAAAAAAAA",
+         "aws.s3.secret_key" = "BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB",
+         "aws.s3.use_instance_profile" = "false",
+         "aws.s3.use_aws_sdk_default_behavior" = "false"
+     );
+```
 
 #### `aws_s3_endpoint=minio:9000`
 
 MinIO 端点，包括端口号。
 
+#### `aws_s3_path=starrocks`
+
+bucket 名称。
+
+#### `aws_s3_access_key=AAAAAAAAAAAAAAAAAAAA`
+
+MinIO 访问密钥。
+
+#### `aws_s3_secret_key=BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB`
+
+MinIO 访问密钥密钥。
+
 #### `aws_s3_use_instance_profile=false`
 
-是否使用 Instance Profile 作为凭证。因为您需要使用访问密钥连接 MinIO，需要该项设置为 false。
-
-#### `cloud_native_storage_type=S3`
-
-用于指定对象存储类型。对于 MinIO，需要将该项设置为 S3。
+使用 MinIO 时使用访问密钥，因此 MinIO 不使用实例配置文件。
 
 #### `aws_s3_use_aws_sdk_default_behavior=false`
 
-是否使用 AWS S3 默认 SDK 认证方式。在使用 MinIO 时，始终将此参数设置为 false。
+使用 MinIO 时，此参数始终设置为 false。
+
+### 配置 FQDN 模式
+
+启动 FE 的命令也进行了更改。Docker Compose 文件中的 FE 服务命令添加了选项 `--host_type FQDN`。通过将 `host_type` 设置为 `FQDN`，Stream Load 任务被转发到 CN pod 的完全限定域名，而不是 IP 地址。这是因为 IP 地址在分配给 Docker 环境的范围内，通常无法从主机机器访问。
+
+这三个更改允许主机网络和 CN 之间的流量：
+
+- 将 `--host_type` 设置为 `FQDN`
+- 将 CN 端口 8040 暴露给主机网络
+- 为 `starrocks-cn` 添加指向 `127.0.0.1` 的 hosts 文件条目
 
 ---
 
 ## 总结
 
-在本教程中，您完成了以下目标：
+在本教程中，您：
 
-- 在 Docker 中部署了 StarRocks 和 MinIO
-- 创建了 MinIO 访问密钥
-- 配置了使用 MinIO 的 StarRocks 存储卷
-- 向 StarRocks 导入了纽约市的交通事故数据和天气数据
-- 使用 JOIN 查询分析数据
+- 在 Docker 中部署了 StarRocks 和 Minio
+- 创建了一个 MinIO 访问密钥
+- 配置了一个使用 MinIO 的 StarRocks 存储卷
+- 导入了纽约市提供的碰撞数据和 NOAA 提供的天气数据
+- 使用 SQL JOIN 分析数据，发现低能见度或结冰街道上驾驶是个坏主意
 
-除以上内容外，本教程有意略过了在 Stream Load 命令中数据转换相关的参数说明。关于此内容的详细信息在下一小节中提供。
+还有更多内容需要学习；我们故意略过了 Stream Load 期间的数据转换。有关详细信息，请参阅下面 curl 命令的注释。
 
 ## 关于 curl 命令的注释
 
@@ -473,7 +582,11 @@ MinIO 端点，包括端口号。
 
 ## 更多信息
 
-- [StarRocks 表设计](../table_design/StarRocks_table_design.md)
-- [Stream Load](../sql-reference/sql-statements/loading_unloading/STREAM_LOAD.md)
-- [纽约市交通事故数据](https://data.cityofnewyork.us/Public-Safety/Motor-Vehicle-Collisions-Crashes/h9gi-nx95) 数据集由纽约市提供，受到以下[使用条款](https://www.nyc.gov/home/terms-of-use.page)和[隐私政策](https://www.nyc.gov/home/privacy-policy.page)的约束。
-- [气象数据](https://www.ncdc.noaa.gov/cdo-web/datatools/lcd)(LCD)由 NOAA 提供，附带[免责声明](https://www.noaa.gov/disclaimer)和[隐私政策](https://www.noaa.gov/protecting-your-privacy)。
+[StarRocks 表设计](../table_design/StarRocks_table_design.md)
+
+[Stream Load](../sql-reference/sql-statements/loading_unloading/STREAM_LOAD.md)
+
+[机动车碰撞 - 事故](https://data.cityofnewyork.us/Public-Safety/Motor-Vehicle-Collisions-Crashes/h9gi-nx95) 数据集由纽约市提供，受这些[使用条款](https://www.nyc.gov/home/terms-of-use.page)和[隐私政策](https://www.nyc.gov/home/privacy-policy.page)约束。
+
+[本地气候数据](https://www.ncdc.noaa.gov/cdo-web/datatools/lcd)（LCD）由 NOAA 提供，附有此[免责声明](https://www.noaa.gov/disclaimer)和此[隐私政策](https://www.noaa.gov/protecting-your-privacy)。
+```
